# docs/swagger.json
@@ -2483,9 +2483,9 @@
                 }
             }
         },
-        "/api/push/test/send": {
+        "/api/push/subscribe": {
             "post": {
-                "description": "Отправляет push-сообщение по переданной подписке",
+                "description": "Регистрирует push-подписку пользователя, сохраняет её в базе",
                 "consumes": [
                     "application/json"
                 ],
@@ -2495,26 +2495,23 @@
                 "tags": [
                     "Push"
                 ],
-                "summary": "Тестовый пуш",
+                "summary": "Подписка на push-уведомления",
                 "parameters": [
                     {
-                        "description": "Пуш-подписка и сообщение",
-                        "name": "request",
+                        "description": "Объект подписки",
+                        "name": "input",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.pushRequest"
+                            "$ref": "#/definitions/models.PushSubscriptionRequest"
                         }
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/utils.SuccessResponse"
                         }
                     },
                     "400": {
@@ -3042,6 +3039,9 @@
                     "type": "string"
                 }
             }
+        },
+        "models.PushSubscriptionRequest": {
+            "type": "object"
         },
         "models.Review": {
             "type": "object",
